add color palet example

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website</title>
+    <title>my Website</title>
 </head>
+<!-- https://colorhunt.co/palette/4834346b4f4feed6c4fff3e4 -->
 
 <body>
 
 </body>
+<img src="imgs/color_palet.png" alt="">
 
 </html>
