editinf index file

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 
 </body>
 <img src="imgs/color_palet.png" alt="">
+<img src="imgs/color_palet.png" alt="">
+<img src="imgs/color_palet.png" alt="">
 
 </html>
