beginning of mapping out

--- a/index.html
+++ b/index.html
@@ -5,16 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my Website</title>
+    <title>Git Assist</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <!-- https://colorhunt.co/palette/4834346b4f4feed6c4fff3e4 -->
 
 <body>
+    <div class="menu">
+        <a href="https://git-scm.com/docs/git">Git Documentation</a>
+        <a href="https://dzone.com/articles/top-20-git-commands-with-examples">20 most Used Git commands</a>
+        <a href="Terminal.html">Terminal</a>
+    </div>
 
+    <br>
+    <div class="body">
+        <a href="https://dzone.com/articles/top-20-git-commands-with-examples">20 most Used Git commands</a>
+        <br>
+        <p>
+            <a href="https://colorhunt.co/palette/2d24245c3d2eb85c38e0c097">Coffee Vivid pallet 1</a><br>
+            <a href="https://colorhunt.co/palette/4834346b4f4feed6c4fff3e4 ">Color pallet 2</a><br>
+            <a href="https://colorhunt.co/palette/dddddd22283130475ef05454">Dark Color pallet</a><br>
+            <a href="https://colorhunt.co/palette/fcf8e8d4e2d4ecb390df7861">Pastel Light shine</a>
+        </p>
+    </div>
+    <hr class="dots">
 </body>
-<img src="imgs/color_palet.png" alt="">
-<img src="imgs/color_palet.png" alt="">
-<img src="imgs/color_palet.png" alt="">
-<a href="logo.imgs"></a>
 
 </html>
