refining layout with divs

--- a/index.html
+++ b/index.html
@@ -7,28 +7,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git Assist</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <!-- https://colorhunt.co/palette/4834346b4f4feed6c4fff3e4 -->
 
 <body>
     <div class="menu">
-        <a href="https://git-scm.com/docs/git">Git Documentation</a>
-        <a href="https://dzone.com/articles/top-20-git-commands-with-examples">20 most Used Git commands</a>
-        <a href="Terminal.html">Terminal</a>
+        <h1><a href="https://dzone.com/articles/top-20-git-commands-with-examples">Most Used<br>Git commands</a></h1>
+        <h1><a href="Terminal.html">Terminal<br>Commands</a></h1>
     </div>
-
-    <br>
     <div class="body">
         <a href="https://dzone.com/articles/top-20-git-commands-with-examples">20 most Used Git commands</a>
+        <br><a href="https://zepel.io/blog/13-git-commands/#git-push">13 Git Commands Every Developer Must Know </a>
         <br>
         <p>
-            <a href="https://colorhunt.co/palette/2d24245c3d2eb85c38e0c097">Coffee Vivid pallet 1</a><br>
-            <a href="https://colorhunt.co/palette/4834346b4f4feed6c4fff3e4 ">Color pallet 2</a><br>
-            <a href="https://colorhunt.co/palette/dddddd22283130475ef05454">Dark Color pallet</a><br>
             <a href="https://colorhunt.co/palette/fcf8e8d4e2d4ecb390df7861">Pastel Light shine</a>
+            <a href="https://colorhunt.co/palette/2d24245c3d2eb85c38e0c097">Coffee Vivid pallet 1</a><br>
+            <a href="https://colorhunt.co/palette/dddddd22283130475ef05454">Dark Color pallet</a><br>
+            <a href="https://colorhunt.co/palette/4834346b4f4feed6c4fff3e4 ">Color pallet 2</a><br>
         </p>
+        <div class="container">1</div>
+        <div class="container">2</div>
+        <div class="container">3</div>
+
+        <hr class="dots">
     </div>
-    <hr class="dots">
+
 </body>
 
 </html>
