--- a/about.html
+++ b/about.html
@@ -9,11 +9,16 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="body">
     <p>hello<br>hello</p>
     <p>stop</p>
-    <p>next</p>
+    <p>next Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde ea illo officia ab saepe quod numquam,
+        recusandae hic autem laudantium qui blanditiis id quis sunt enim impedit consectetur fugit omnis architecto
+        dicta sed repudiandae consequatur voluptatum?</p>
 
+    <br>
+    <br>
+    <br>
     <br>
 
     <a href="www">bye </a>
