--- a/index.html
+++ b/index.html
@@ -131,13 +131,16 @@
         <details class="info">
             <summary>
                 <div class="info__header">
-                    <h2>git add - </h2>
-                    <p> adds a file to the staging area</p>
+                    <h2>git commit - </h2>
+                    <p> captures a snapshot of the project's currently staged changes. </p>
                 </div>
             </summary>
             <div class="info__details">
-                <p>git add [name of the file] <span class="comment"> - adds specific file </p>
-                <p>git add . <span class="comment"> - adds all new and modified files and folders</span></p>
+                <p>git commit -m "[memo]"<span class="comment"></p>
+                <p>git commit -am "[memo]"<span class="comment"> - adds and commits all new and modified files and
+                        folders</span></p>
+                <p>git commit --amend<span class="comment">command to modify the most recent commit message(if nothing
+                        staged atm)</p>
             </div>
         </details>
 
