more git commands

--- a/index.html
+++ b/index.html
@@ -137,10 +137,16 @@
             </summary>
             <div class="info__details">
                 <p>git commit -m "[memo]"<span class="comment"></p>
-                <p>git commit -am "[memo]"<span class="comment"> - adds and commits all new and modified files and
-                        folders</span></p>
-                <p>git commit --amend<span class="comment">command to modify the most recent commit message(if nothing
-                        staged atm)</p>
+                <p>git commit -am "[memo]"
+                    <span class="comment">
+                        - adds and commits all new and modified files and folders
+                    </span>
+                </p>
+                <p>git commit --amend -m "[new memo]"
+                    <span class="comment">
+                        - command to modify the most recent commit message (if nothing staged atm) or
+                    </span>
+                </p>
             </div>
         </details>
 
